--- a/app/assets/stylesheets/api/occasions.scss
+++ b/app/assets/stylesheets/api/occasions.scss
@@ -50,8 +50,19 @@ background: whitesmoke;
   align-items: center;
   overflow: scroll;
   height: 100%;
+  width: 390px;
 }
 
+.occasions-map{
+  display: flex;
+  flex-direction: column;
+  color: #2f2d2f;
+  width: 45%;
+  height: 290px;
+  top: 6px;
+  position: relative;
+  overflow: scroll;
+}
 
 
 .occasion-item{
@@ -101,10 +112,12 @@ background: white;
   text-align: center;
   background: #94b0ff;
   opacity: 0.9;
+  transition: background 1s, color 1.5s;
   box-shadow: 0 2px 0px 1px rgba(128, 128, 128, 0.3);
 }
 .volunteer:hover{
   background: #183994;
+  color: white;
 }
 
 
