--- a/app/assets/stylesheets/app.scss
+++ b/app/assets/stylesheets/app.scss
@@ -31,10 +31,11 @@ footer {
   color: black;
   background-color: white;
   font-family: Tahoma, sans-serif;
-  height: 50px;
+  height: 7%;
   display: flex;
   font-size: 16px;
   align-items: center;
+  position: static;
   justify-content: flex-end;
 }
 
