--- a/app/assets/stylesheets/api/manager_modal.scss
+++ b/app/assets/stylesheets/api/manager_modal.scss
@@ -1,16 +1,16 @@
 .manager-modal{
-    border: 1px solid #2a282b;
-    position: relative;
-    background: white;
-    overflow: hidden;
-    -webkit-overflow-scrolling: touch;
-    border-radius: 4px;
-    outline: none;
-    box-shadow: 2px 10px 40px 0px rgba(0, 0, 0, 0.75);
-    height: 400px;
-    width: 650px;
-    margin: auto;
-    margin-top: 100px;
+  border: 1px solid #2a282b;
+  position: relative;
+  background: white;
+  overflow: hidden;
+  border-radius: 4px;
+  outline: none;
+  box-shadow: 2px 10px 40px 0px rgba(0, 0, 0, 0.75);
+  height: 400px;
+  margin-left: 30%;
+  margin-top: 100px;
+  display: inline-block;
+  flex-direction: column;
 }
 
 .manage-venues-content{
@@ -19,16 +19,19 @@
   height: 100%;
   flex-direction: row;
   display: flex;
-width: 100%;
-height: 100%;
-flex-direction: row;
-background: white;
+  width: 100%;
+  height: 100%;
+  align-items: center;
+  flex-direction: row;
+  background: white;
 }
 
 charity{
   font-size: 18px;
   font-weight: bold;
   text-align: center;
+  position: relative;
+  top: -3px;
 }
 
 .VenueDisplay{
@@ -80,9 +83,9 @@ charity{
   font-style: italic;
 }
 .another-close-button{
-  position: fixed;
-  margin-left: 634px;
   font-weight: 600;
+  text-align: right;
+  width: 100%;
 }
 .another-close-button:hover{
   text-decoration: underline;
@@ -92,20 +95,18 @@ charity{
   display: flex;
   overflow: scroll;
   flex-direction: column;
-  width: 43%;
-  margin-right: 45px;
-  margin-left: 10px;
-  margin-top: 10px;
+  margin-right: 20px;
+  margin-left: 20px;
+  margin-top: -70px;
   position: relative;
   top: 31px;
   height: 88%;
-
+  align-items: center;
   .title{
     font-weight: bold;
     text-decoration: underline;
-    font-size: 23px;
+    font-size: 18px;
     position: fixed;
-    margin-left: 109px;
   }
   .small-detail{
     color: red;
@@ -118,6 +119,7 @@ charity{
 
   span{
     display: flex;
+    width: 322px;
     flex-direction: column;
     align-items: center;
     h1{
@@ -134,9 +136,11 @@ charity{
 }
 
 .form-occasions{
+  height: 100%;
   margin-top: 52px;
   display: flex;
-  width: 35%;
+  width: 360px;
+  margin-bottom: 19px;
   overflow: scroll;
   flex-direction: column;
   h1{
@@ -167,6 +171,7 @@ charity{
   text-align: center;
   text-indent: 20px;
   margin-top: 6px;
+  width: 92%;
   font-size: 14px;
   font-family: 'Lato', sans-serif;
   color: rgb(187, 182, 182);
