--- a/app/assets/stylesheets/api/schedule_modal.scss
+++ b/app/assets/stylesheets/api/schedule_modal.scss
@@ -1,15 +1,15 @@
 .schedule-modal{
   border: 1px solid #2a282b;
-  position: relative;
-  background: white;
-  overflow: scroll;
-  border-radius: 4px;
-  outline: none;
-  box-shadow: 2px 10px 40px 0px rgba(0, 0, 0, 0.75);
-  height: 400px;
-  width: 730px;
-  margin: auto;
-  margin-top: 100px;
+      position: relative;
+      background: white;
+      overflow: scroll;
+      border-radius: 4px;
+      outline: none;
+      box-shadow: 2px 10px 40px 0px rgba(0, 0, 0, 0.75);
+      height: 400px;
+      margin: 0 auto;
+      display: table;
+      margin-top: 100px;
 }
 
 .schedule-modal-thumbnail{
@@ -82,15 +82,14 @@
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
-  margin: 13px;
+  margin-right: 10px;
+  margin-left: 29px;
   height: 100%;
-  width: 53%;
-  overflow: scroll;
 }
 
 .schedule-item{
   height: 79px;
-  width: 98%;
+  width: 361px;
   display: flex;
   margin-bottom: 18px;
   margin-left: 4px;
@@ -167,8 +166,9 @@ info{
 }
 .schedule-close{
   position: relative;
-  bottom: 401px;
-  left: 713px;
+  height: 100%;
+  width: 100%;
+  text-align: end;
   cursor: pointer;
 }
 
