--- a/app/assets/stylesheets/header.scss
+++ b/app/assets/stylesheets/header.scss
@@ -1,10 +1,10 @@
 header {
   color: black ;
   font-family: Tahoma, sans-serif;
-  height: 78px;
+  height: 9%;
   font-size: 112%;
   background: white;
-
+  position: static;
   img, a {
     cursor: pointer;
     margin-left: 20px;
@@ -23,6 +23,7 @@ header {
   align-items: center;
   width: 100%;
   height: 100%;
+  position: static;
   background: white;
 
   a:hover{
@@ -100,6 +101,8 @@ header {
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
+    opacity: 0.8;
+
 }
 
 .button-x{
@@ -119,7 +122,8 @@ header {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  width:100%;
+  width: 100%;
+  height: 90%;
   align-items: center;
 }
 
@@ -127,12 +131,22 @@ header {
   align-self: center;
 }
 
+#sign-in{
+  width: 156px;
+  height: 30px;
+}
+
+#sign-up{
+  width: 175px;
+  height: 30px;
+}
 
 .log-in-form, .demo-form{
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: space-around;
   height: 100%;
+  width: 43%;
   align-items: center;
   .sign-in-errors, h3{
     font-size: 11px;
@@ -144,38 +158,96 @@ header {
   }
 }
 
-.demo-form input{
+.demo-submit {
+  height: 37px;
+  width: 200px;
+  border-radius: 4px;
+  background: white;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  overflow: hidden;
   position: relative;
-    cursor: pointer;
-    padding: 6px 12px;
-    border-radius: 4px;
+  cursor: pointer;
+  box-shadow: 0 1px 1px 1px #bd94f5;
+}
+.divider{
+  height: 100%;
+  width: 0%;
+  text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-right: 1px solid;
+  h2{
     background: white;
-    border: 1px solid #ccc;
+    height: 35px;
+    display: flex;
+    align-items: center;
+  }
+}
+.label{
+  width:70%;
+  height: 60%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-right: 1px solid gray;
+  overflow: hidden;
+  position: relative;
+  transition: height, width, position, .5s
 }
 
-.demo-form input:hover{
+.icon{
+  width: 22%;
+  height: 100%;
+  img{
+    width: 40px;
+    height: 70%;
+  }
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transition: height, width, font-size, .5s;
+}
+
+.demo-submit:hover{
   color: #333;
-  background-color: rgba(189, 180, 180, 0.28);
   border-color: #adadad;
+  .icon{
+  width: 100%;
+  height: 100%;
+  font-size: 25px;
+    img{
+      width: 40px;
+      height: 70%;
+    }
+  }
+  .label{
+    width: 0%;
+    right: 5px;
+  }
 }
-
 
 
 .login-input{
-  margin-top: 11px;
-  width: 202px;
-  height: 31px;
+  margin: 5px;
+  margin-left: 8px;
+  width: 94%;
+  height: 14px;
+  min-height: 28px;
   border: 0;
-  border: 1px solid #ccc;
-  border-radius: 4px;
-  box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
+  border-bottom: 1px solid #ccc;
+  text-align: center;
+  font-size: 13px;
+  margin-top: 11px;
   transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;
 }
 
 .login-input:focus{
-  border-color: #66afe9;
+  border-color: #8a3af5;
   outline: 0;
-  box-shadow: inset 0 1px 1px rgba(0,0,0,.075),0 0 8px rgba(102,175,233,.6);
 }
 
 .submit{
