--- a/app/assets/stylesheets/homepage/home.scss
+++ b/app/assets/stylesheets/homepage/home.scss
@@ -1,5 +1,12 @@
-.content {
+#content{
+  height: 100%
+}
 
+.homepage{
+  height: 100%
+}
+.content {
+  height: 100%;
 }
 
 
@@ -9,17 +16,18 @@
   justify-content: center;
   flex-direction: column;
   align-items: center;
+  height: 84%;
 }
 
 
 .jumbotron {
   width: 100%;
-  height: 700px;
+  height: 100%;
   text-align: center;
   position: relative;
   display: flex;
   justify-content: center;
-  background: url(http://res.cloudinary.com/dfld7chk4/image/upload/v1467255716/splashpage_fe9nkj.jpg);
+  background: url(http://res.cloudinary.com/dfld7chk4/image/upload/c_scale,h_900,w_1800/v1467255716/splashpage_fe9nkj.jpg);
   background-size: cover;
   background-position: bottom;
 }
@@ -29,6 +37,7 @@
     position: relative;
     text-shadow: 1.3px 1.3px 1.3px #000000;
     width: 500px;
+    height: 100%;
     padding: 5px;
     font-size: 44px;
     color: white;
@@ -46,18 +55,18 @@
     }
     h2{
       font-size: 32px;
-      color: #060606;
+      color: #6d63bd;
       margin-top: 20px;
-      text-shadow: 0.5px 0.5px black;
+      // text-shadow: 0.5px 0.5px black;
       position: relative;
       top: 93px;
 
     }
     a {
       width: 160px;
-      border: solid;
+      border: solid skyblue;
       border-radius: 4px;
-      box-shadow: 0 2px 2px 2px #ccc;
+      box-shadow: 0 2px 2px 2px skyblue;
     }
   }
 
