--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,8 +10,8 @@
   <script src="//widget.cloudinary.com/global/all.js" type="text/javascript"></script>
   <script type="text/javascript">
     window.CLOUDINARY_OPTIONS = {
-      cloud_name: '<%= ENV['CLOUD_NAME']%>',
-      upload_preset: '<%= ENV['UPLOAD_PRESET']%>',
+      cloud_name: "<%= ENV['CLOUD_NAME']%>",
+      upload_preset: "<%= ENV['UPLOAD_PRESET']%>",
       sources: ['local'],
       theme: 'minimal'
     };
