more css and seed editing to make img smaller

--- a/app/assets/stylesheets/api/indexmodal.scss
+++ b/app/assets/stylesheets/api/indexmodal.scss
@@ -96,6 +96,7 @@ width: 57%;
   text{
     position: relative;
     top: -30px;
+    margin-top: 35px;
     margin-right: 11px;
   }
 }
@@ -187,7 +188,7 @@ overflow: scroll;
 
 .close-button {
   position: relative;
-  top: -418px;
+  top: -366px;
   right: 2px;
   font-weight: 600;
 }
