--- a/app/assets/stylesheets/api/manager_modal.scss
+++ b/app/assets/stylesheets/api/manager_modal.scss
@@ -133,6 +133,11 @@ charity{
   width: 94px;
   font-size: 20px;
   align-self: center;
+  cursor: pointer;
+}
+
+.occasion-submit:hover{
+  box-shadow: 0px 1px 1px 1px #ccc;
 }
 
 .form-occasions{
