--- a/app/assets/stylesheets/api/occasions.scss
+++ b/app/assets/stylesheets/api/occasions.scss
@@ -99,11 +99,17 @@ background: white;
 }
 
 .button-third{
-  width: 27%;
   display: flex;
   align-items: center;
   justify-content: space-around;
   border-left: 1px solid #ccc;
+  height: 100%;
+  width: 27%;
+  text-align: center;
+  background: #94b0ff;
+  opacity: 0.9;
+  transition: background 1s, color 1.5s;
+  box-shadow: 0 2px 0px 1px rgba(128, 128, 128, 0.3);
 }
 
 .volunteer{
@@ -167,7 +173,7 @@ min-height: 101px;
 
 .modal-close-button{
   position: relative;
-  top: -367px;
+  top: -337px;
   right: 2px;
   font-weight: 600;
 }
