changed main-image size

--- a/app/assets/stylesheets/homepage/home.scss
+++ b/app/assets/stylesheets/homepage/home.scss
@@ -28,7 +28,7 @@
   position: relative;
   display: flex;
   justify-content: center;
-  background: url(http://res.cloudinary.com/dfld7chk4/image/upload/c_scale,h_900,w_1800/v1467255716/splashpage_fe9nkj.jpg);
+  background: url(http://res.cloudinary.com/dfld7chk4/image/upload/v1470418999/splashpage_copy_eig5cm.jpg);
   background-size: cover;
   background-position: bottom;
 }
