small modal changes

--- a/app/assets/stylesheets/api/occasions.scss
+++ b/app/assets/stylesheets/api/occasions.scss
@@ -108,7 +108,8 @@ background: white;
   text-align: center;
   background: #94b0ff;
   opacity: 0.9;
-  transition: background 1s, color 1.5s;
+  transition: background 0.5s, color 1s;
+  -webkit-transition: background 0.5s, color 1s;
   box-shadow: 0 2px 0px 1px rgba(128, 128, 128, 0.3);
 }
 
@@ -118,7 +119,7 @@ background: white;
   text-align: center;
   background: #94b0ff;
   opacity: 0.9;
-  transition: background 1s, color 1.5s;
+  -webkit-transition: background 0.5s, color 1s;
   box-shadow: 0 2px 0px 1px rgba(128, 128, 128, 0.3);
 }
 .volunteer:hover{
@@ -129,15 +130,17 @@ background: white;
 
 .cancel{
   height: 102%;
-    width: 100%;
-    text-align: center;
-    background: #f9a4a4;
-    opacity: 0.9;
-    box-shadow: 0 2px 0px 1px rgba(128, 128, 128, 0.3);
+  width: 100%;
+  text-align: center;
+  background: #f9a4a4;
+  opacity: 0.9;
+  -webkit-transition: background 0.5s, color 1s;
+  box-shadow: 0 2px 0px 1px rgba(128, 128, 128, 0.3);
 }
 
 .cancel:hover{
   background: #e62424;
+  color: white;
 }
 
 .matches{
@@ -146,7 +149,7 @@ background: white;
     font-size: 18px;
   }
   width: 100%;
-min-height: 101px;
+  min-height: 101px;
   display: flex;
   flex-direction: column;
   align-items: center;
