--- a/app/assets/stylesheets/header.scss
+++ b/app/assets/stylesheets/header.scss
@@ -95,7 +95,7 @@ header {
     height: 281px;
     width: 540px;
     padding: 20px;
-    background: rgba(255, 255, 255, 0.43);
+    background: white;
     display: flex;
     color: black;
     flex-direction: row;
